# computer-vision-speed-monitor

./: CMakeLists.txt  conanfile.py
include/: placeholder.h  recorder.h  tracked_object.h
src/: main.cpp  placeholder.cpp  recorder.cpp  tracked_object.cpp
test/: test.cpp  test_placeholder.cpp
